# mandelbrot-papy

./: .buildinfo  .gitignore  LICENSE.txt  PAPY_C4_full.ipynb  README.md  genindex.html  index.html  mandelbrot.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.html  sujet.html  sujet.md  tests.html
.github/workflows/: deploy_docs.yaml
_modules/: index.html
_modules/mandelbrot/: img_generator.html  is_in_set.html
_modules/tests/: test_sequences.html
_sources/: index.rst.txt  mandelbrot.rst.txt
_static/: bizstyle.js
doc/source/: conf.py  modules.rst  tests.rst
mandelbrot/: __main__.py  img_generator.py  is_in_set.py  sequences.py
tests/: test_sequences.py
