[metadata]
name = mandelbrot
author = Paul TRINCKLIN and Alexis DELAGE
version = 1.0
license_file = LICENSE.txt
license = MIT
description = A module to draw mandelbrot or julia figures.
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    pytest
    pillow
    numpy

[options.extras_require]
docs =
    sphinx<5.0
    myst_parser
    pydata_sphinx_theme
    sphinx_markdown_tables
    sphinx_rtd_theme
    sphinxcontrib-mermaid

[options.entry_points]
console_scripts =
    mandelbrotPlot = mandelbrot.__main__:mandelbrot
    juliaPlot = mandelbrot.__main__:julia

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS